First draft - Branch - Learning jQuery Plugin. - Written some code - Dealt with passing and parsing objects - Wanna do some "finding" in the object - Added readme.md file

--- a/css/nadir.css
+++ b/css/nadir.css
@@ -1,4 +1,4 @@
-/* Behancé Portfolio Plugin — By Nadir
+/* Behance Portfolio Plugin — By Nadir
  * Source: https://github.com/nadirnasir/behance-portfolio-plugin-nadir.git
  *
  * Created by Nadir Nasir (@nadirnasir)
